--- a/index.html
+++ b/index.html
@@ -6,16 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SD Web 2 Assignment 1</title>
   <link rel="stylesheet" href="main.css" />
-  <script src="index.js"></script>
+  <script src="script.js" defer></script>
 </head>
-<div>
-  <div>
+
+<body>
+  <header>
     <nav>
       <div><a href="index.html">Home</a></div>
       <!-- Create a list with placeholder links for 3 other pages -->
+      <ul>
+        <li>
+          <a href="https://www.google.com/">Google</a>
+        </li>
+        <li>
+          <a href="https://www.google.com/">Google</a>
+        </li>
+        <li>
+          <a href="https://www.google.com/">Google</a>
+        </li>
+      </ul>
     </nav>
-  </div>
-  <div>
+  </header>
+
+  <main>
     <div>
       <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
       <p>
@@ -23,7 +36,7 @@
         and fill in the results on this page.
       </p>
     </div>
-    <div id="exercise-1">
+    <section id="exercise-1">
       <h1>Exercise 1: Print Character Names</h1>
       <p>Print out the names of each character in the console.</p>
       <div class="output">
@@ -32,9 +45,9 @@
           <!-- Character names will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-2">
+    <section id="exercise-2">
       <h1>Exercise 2: Filter by Age</h1>
       <p>Print out the names of characters whose age is less than 40.</p>
       <div class="output">
@@ -43,9 +56,9 @@
           <!-- Filtered character names will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-3">
+    <section id="exercise-3">
       <h1>Exercise 3: Reusable Function for Lists</h1>
       <p>
         Create a function that takes any array and renders a list of character names on the page.
@@ -56,9 +69,9 @@
           <!-- Function-generated list will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-4">
+    <section id="exercise-4">
       <h1>Exercise 4: Age Filter Function</h1>
       <p>
         Create a function that takes an array and an age threshold, then displays characters below that age.
@@ -69,9 +82,9 @@
           <!-- Age-filtered results will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-5">
+    <section id="exercise-5">
       <h1>Exercise 5: Error Handling</h1>
       <p>Add error handling to check if objects have a "name" property.</p>
       <div class="output">
@@ -83,9 +96,9 @@
           <!-- Error messages will be displayed here -->
         </div>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-6">
+    <section id="exercise-6">
       <h1>Exercise 6: Test Error Handling</h1>
       <p>Test your error handling by using a broken array.</p>
       <div class="output">
@@ -97,7 +110,8 @@
           <!-- Error messages from broken array will be displayed here -->
         </div>
       </div>
-    </div>
+    </section>
+    
     <div>
       <div>
         <h1>Article Collection</h1>
@@ -124,11 +138,10 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div>
-    <p>&copy; 2025 SAIT</p>
-  </div>
-</div>
+    </main>
 
+  <footer>
+    <p>&copy;Crescia Dominguez 2026 SAIT</p>
+  </footer>
+</body>
 </html>
