--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
 <body>
   <header>
     <nav>
-      <div><a href="index.html">Home</a></div>
       <!-- Create a list with placeholder links for 3 other pages -->
       <ul>
-        <li>
-          <a href="https://www.google.com/">Google</a>
-        </li>
-        <li>
-          <a href="https://www.google.com/">Google</a>
-        </li>
-        <li>
-          <a href="https://www.google.com/">Google</a>
-        </li>
+        <li><a href="index.html">Home</a></li>
+        <div>
+          <li><a href="https://www.google.com/">Google</a></li>
+          <li><a href="https://www.google.com/">Google</a></li>
+          <li><a href="https://www.google.com/">Google</a></li>
+        </div>
       </ul>
     </nav>
   </header>
