--- a/index.html
+++ b/index.html
@@ -13,113 +13,109 @@
   <header>
     <nav>
       <!-- Create a list with placeholder links for 3 other pages -->
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <div>
-          <li><a href="https://www.google.com/">Google</a></li>
-          <li><a href="https://www.google.com/">Google</a></li>
-          <li><a href="https://www.google.com/">Google</a></li>
-        </div>
-      </ul>
+      <div>
+        <a href="index.html">Home</a>
+        <ul>
+          <li><a href="https://www.google.com">Google</a></li>
+          <li><a href="https://www.google.com">Google</a></li>
+          <li><a href="https://www.google.com">Google</a></li>
+        </ul>
+      </div>
     </nav>
+    <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
+    <p>
+      Complete the JavaScript exercises below. Check the console for output
+      and fill in the results on this page.
+    </p>
   </header>
-
   <main>
-    <div>
-      <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
-      <p>
-        Complete the JavaScript exercises below. Check the console for output
-        and fill in the results on this page.
-      </p>
+  <section id="exercise-1">
+    <h2>Exercise 1: Print Character Names</h2>
+    <p>Print out the names of each character in the console.</p>
+    <div class="output">
+      <h2>Results:</h2>
+      <ul id="names-list">
+      </ul>
     </div>
-    <section id="exercise-1">
-      <h1>Exercise 1: Print Character Names</h1>
-      <p>Print out the names of each character in the console.</p>
-      <div class="output">
-        <h1>Results:</h1>
-        <ul id="names-list">
-          <!-- Character names will be populated here -->
-        </ul>
-      </div>
-    </section>
+  </section>
 
-    <section id="exercise-2">
-      <h1>Exercise 2: Filter by Age</h1>
-      <p>Print out the names of characters whose age is less than 40.</p>
-      <div class="output">
-        <h1>Results:</h1>
-        <ul id="young-characters-list">
-          <!-- Filtered character names will be populated here -->
-        </ul>
-      </div>
-    </section>
+  <section id="exercise-2">
+    <h2>Exercise 2: Filter by Age</h2>
+    <p>Print out the names of characters whose age is less than 40.</p>
+    <div class="output">
+      <h2>Results:</h2>
+      <ul id="young-characters-list">
+      <!-- Filtered character names will be populated here -->
+      </ul>
+    </div>
+  </section>
 
-    <section id="exercise-3">
-      <h1>Exercise 3: Reusable Function for Lists</h1>
-      <p>
-        Create a function that takes any array and renders a list of character names on the page.
-      </p>
-      <div class="output">
-        <h1>Results:</h1>
-        <ul id="function-list">
+  <section id="exercise-3">
+    <h2>Exercise 3: Reusable Function for Lists</h2>
+    <p>
+      Create a function that takes any array and renders a list of character names on the page.
+    </p>
+    <div class="output">
+      <h2>Results:</h2>
+      <ul id="function-list">
           <!-- Function-generated list will be populated here -->
-        </ul>
-      </div>
-    </section>
+      </ul>
+    </div>
+  </section>
 
-    <section id="exercise-4">
-      <h1>Exercise 4: Age Filter Function</h1>
-      <p>
-        Create a function that takes an array and an age threshold, then displays characters below that age.
-      </p>
-      <div class="output">
-        <h1>Results:</h1>
-        <ul id="age-filter-list">
-          <!-- Age-filtered results will be populated here -->
-        </ul>
-      </div>
-    </section>
+  <section id="exercise-4">
+    <h2>Exercise 4: Age Filter Function</h2>
+    <p>
+      Create a function that takes an array and an age threshold, then displays characters below that age.
+    </p>
+    <div class="output">
+      <h2>Results:</h2>
+      <ul id="age-filter-list">
+        <!-- Age-filtered results will be populated here -->
+      </ul>
+    </div>
+  </section>
 
-    <section id="exercise-5">
-      <h1>Exercise 5: Error Handling</h1>
-      <p>Add error handling to check if objects have a "name" property.</p>
-      <div class="output">
-        <h1>Results:</h1>
-        <ul id="error-handling-list">
-          <!-- Error-handled results will be populated here -->
-        </ul>
-        <div id="error-messages">
-          <!-- Error messages will be displayed here -->
-        </div>
+  <section id="exercise-5">
+    <h2>Exercise 5: Error Handling</h2>
+    <p>Add error handling to check if objects have a "name" property.</p>
+    <div class="output">
+      <h2>Results:</h2>
+      <ul id="error-handling-list">
+        <!-- Error-handled results will be populated here -->
+      </ul>
+      <div id="error-messages">
+        <!-- Error messages will be displayed here -->
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="exercise-6">
-      <h1>Exercise 6: Test Error Handling</h1>
-      <p>Test your error handling by using a broken array.</p>
-      <div class="output">
-        <h1>Results:</h1>
-        <ul id="broken-array-list">
-          <!-- Broken array test results will be populated here -->
-        </ul>
-        <div id="broken-array-errors">
-          <!-- Error messages from broken array will be displayed here -->
-        </div>
+  <section id="exercise-6">
+    <h2>Exercise 6: Test Error Handling</h2>
+    <p>Test your error handling by using a broken array.</p>
+    <div class="output">
+      <h2>Results:</h2>
+      <ul id="broken-array-list">
+        <!-- Broken array test results will be populated here -->
+      </ul>
+      <div id="broken-array-errors">
+        <!-- Error messages from broken array will be displayed here -->
       </div>
-    </section>
-    
+    </div>
+  </section>
+
+  <section>
     <div>
-      <div>
-        <h1>Article Collection</h1>
-      </div>
-      <!-- responsible for layout of articles -->
-      <div>
-        <!-- specific article -->
-        <div>
+      <h2>Article Collection</h2>
+    </div>
+    <!-- responsible for layout of articles -->
+    <div>
+      <!-- specific article -->
+      <article>
           <div>
-            <h1>Article Title</h1>
+            <h2>Article Title</h2>
             <p></p>
-            <img src="" alt="" />
+            <!-- <img src="" alt="" /> -->
             <div>
               <!-- Author information -->
             </div>
@@ -132,9 +128,10 @@
           <div>
             <p>final info about the article</p>
           </div>
-        </div>
-      </div>
-    </main>
+      </article>
+    </div>
+  </section>
+  </main>
 
   <footer>
     <p>&copy;Crescia Dominguez 2026 SAIT</p>
